Fixed a bug with fetch that overwrote default options for each call. Adjusted positioning of login form on mobile.

--- a/frontend/src/components/pages/user/styles.scss
+++ b/frontend/src/components/pages/user/styles.scss
@@ -2,12 +2,21 @@
     display: flex;
     flex-direction: column;
 
+    @media only screen and (max-width: 767px) {
+        align-items: center;
+        margin-top: calc(var(--grid-unit) * 3px);
+    }
+
     .buttons {
         display: flex;
         flex-direction: row;
 
         > button {
             margin-right: calc(var(--grid-unit) * 1px);
+        }
+
+        @media only screen and (max-width: 767px) {
+            align-items: center;
         }
     }
 }
